Welcome page complete.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 			</div>
 
+			<link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Germania+One|Titillium+Web" rel="stylesheet">
 			<link rel="stylesheet" href="public/bin/css/style.css">
 			<script src="public/bin/js/lib.js"></script>
 			<script src="public/bin/js/beerOrJS.js"></script>
