--- a/public/app/features/welcomePage/welcomePage.html
+++ b/public/app/features/welcomePage/welcomePage.html
@@ -1,3 +1,14 @@
 <div class="welcome-page">
-	Hello!
+	<div class="welcome-page-title">
+		<span class="welcome-page-title-beer">BEER</span> or <span class="welcome-page-title-javascript">Javascript</span>?
+	</div>
+	<div class="welcome-page-body">
+		Waddup playas? I know you been trackin all these wack names for brews, code, and other shit. Time to test yo knowledge son! See how many of these dope rhymes you can kick to prove yo'self as true lover of brew and code!
+	</div>
+	<div class="welcome-page-link-wrapper">
+		<a class="welcome-page-link" href="#/questions">
+			Let's Get Started!
+		</a>
+	</div>
+
 </div>
