First draft of the complete app. Still need to tweak content.

--- a/public/app/features/donePage/donePage.html
+++ b/public/app/features/donePage/donePage.html
@@ -1,3 +1,8 @@
 <div class="done-page">
-	I am done
+	<div class="done-page-title">
+		You got <span>{{totalCorrect}}</span> correct of <span>{{total}}</span>
+	</div>
+	<div class="done-page-body">
+		{{score.text}}
+	</div>
 </div>
